# todo-app

./: Cargo.toml  README.md  deploy.sh  setup_db.sql  todo-app-https.service  todos.db
migrations/: 20250806000001_initial_schema.sql  20250806000002_create_users.sql
src/: auth.rs  database.rs  https.rs  main.rs  simple_auth.rs  simple_db.rs
